# RoboticDesign---Team-10

./: README.md  package.xml  setup.py
install/: local_setup.sh  setup.sh
install/gz_example_robot_description/share/gz_example_robot_description/: package.sh
log/: latest_build
manipulator_work/manipulator_ros2_python_workspace/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
manipulator_work/manipulator_ros2_python_workspace/log/: latest_build  latest_list
manipulator_work/manipulator_ros2_workspace/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
manipulator_work/manipulator_ros2_workspace/log/: latest_build  latest_list
manipulator_work/manipulator_ros2_workspace/src/px150_move_group_commander/: CMakeLists.txt  package.xml
manipulator_work/manipulator_ros2_workspace/src/px150_move_group_commander/include/: gz_sim_box.stl  leo_test_world.world
manipulator_work/manipulator_ros2_workspace/src/px150_move_group_commander/include/interbotix_moveit_interface/: moveit_interface_obj.hpp
manipulator_work/manipulator_ros2_workspace/src/px150_move_group_commander/launch/: move_group_commander_gzclassic.launch.py  move_group_commander_sim_launch.launch.py  move_group_px150_launch.launch.py
manipulator_work/manipulator_ros2_workspace/src/px150_move_group_commander/src/: moveit_interface_obj.cpp  px150_move_group_commander_node.cpp
object_detection/: object_detection.py
object_detection.egg-info/: PKG-INFO  SOURCES.txt
src/object_detection/launch/: object_detection_launch.py
src/object_detection/object_detection/: object_detection.py
src/openCV_ros2/install/: local_setup.sh  setup.sh
src/openCV_ros2/log/: latest_build  latest_test
team10/nav/: package.xml  setup.py
team10/nav/launch/: nav_demo.launch.py
team10/nav/nav/: nav2_nav_test.py  patrol_service_node.py  robot_state_machine.py
team10/node/: package.xml  setup.py
team10/node/launch/: rover.launch.py
team10/ope/: package.xml  setup.cfg  setup.py
team10/ope/ope/: main.py
team10/rplidar_ros/launch/: rplidar_a2m12_launch.py
(+132 files in other folders)
